--- a/AppPundits.ParkingApp/app/layout/topnav.html
+++ b/AppPundits.ParkingApp/app/layout/topnav.html
@@ -1,6 +1,6 @@
 ﻿<nav class="navbar navbar-fixed-top navbar-inverse">
     <div class="navbar-header">
-        <a href="/" class="navbar-brand"><span class="brand-title">Hot Towel Angular</span></a>
+        <a href="/" class="navbar-brand"><span class="brand-title">Parking</span></a>
         <a class="btn navbar-btn navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -11,18 +11,16 @@
         <div class="pull-right navbar-logo">
             <ul class="nav navbar-nav pull-right">
                 <li>
-                    <a href="http://www.johnpapa.net/hottowel-angular" target="_blank">
-                        Created by John Papa
+                    <a href="#" target="_blank">
                     </a>
                 </li>
                 <li>
-                    <a href="http://www.breezejs.com" target="_blank">
-                        <img src="../../Content/images/breezelogo.png" />
+                    <a href="#" target="_blank">
+                        <img src="" />
                     </a>
                 </li>
                 <li class="dropdown dropdown-big">
-                    <a href="http://www.angularjs.org" target="_blank">
-                        <img src="../../Content/images/AngularJS-small.png" />
+                    <a href="#" target="_blank">
                     </a>
                 </li>
             </ul>
