--- a/AppsPundits.ParkingWeb/app/layout/sidebar.html
+++ b/AppsPundits.ParkingWeb/app/layout/sidebar.html
@@ -6,7 +6,7 @@
         </div>
         <ul class="navi">
             <li class="nlightblue fade-selection-animation" data-ng-class="vm.isCurrent('dashboard')">
-                <a href="#/dashboard"><i class="fa fa-dashboard"></i> Dashboard</a>
+                <a href="#/"><i class="fa fa-dashboard"></i> Dashboard</a>
             </li>
             <li class="nlightblue fade-selection-animation" data-ng-class="vm.isCurrent('admin')">
                 <a href="#/admin"><i class="fa fa-lock"></i> Admin</a>
