--- a/AppsPundits.ParkingWeb/app/layout/sidebar.html
+++ b/AppsPundits.ParkingWeb/app/layout/sidebar.html
@@ -16,4 +16,16 @@
             </li>
         </ul>
     </div>
+    <script type="text/ng-template" id="myModalContent.html">
+        <div class="modal-header">
+            <h3 class="modal-title">{{title}}</h3>
+        </div>
+        <div class="modal-body">
+            <p>{{message}}</p>
+        </div>
+        <div class="modal-footer">
+            <button class="btn btn-primary" type="button" ng-click="ok()">OK</button>
+            <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
+        </div>
+    </script>
 </div>
