--- a/AppsPundits.ParkingWeb/Content/styles.css
+++ b/AppsPundits.ParkingWeb/Content/styles.css
@@ -203,7 +203,6 @@ small {
 }
 
 .navbar .navbar-brand {
-    background: url(/content/images/icon.png) no-repeat left center !important;
     margin: 0 1em;
 }
 
@@ -214,6 +213,10 @@ small {
 
 .navbar-logo img {
     height: 20px;
+}
+
+.navbar-fixed-top {
+    border-width: 0 0 0px !important;
 }
 
 .today-datas li {
@@ -549,3 +552,25 @@ a {
 }
 
 /*#endregion */
+
+.submit-form input {
+	background: #fff;
+	border: none;
+	color: #000;
+	height: 48px;
+	margin-bottom:22px;
+	padding: 0 15px;
+	width: 100%;
+    border-radius: 0;
+    -webkit-box-shadow: inset 0 0 0 rgba(0,0,0,.075);
+    box-shadow: inset 0 0 0 rgba(0,0,0,.075);
+}
+.submit-form button{
+	width: 100%;
+	margin: 0px;
+	padding: 0px;
+	height: 55px;
+	background: #d12323;
+	color: #fff;
+	border: none;
+}
