--- a/AppsPundits.ParkingWeb/app/layout/topnav.html
+++ b/AppsPundits.ParkingWeb/app/layout/topnav.html
@@ -1,7 +1,8 @@
 ﻿<nav class="navbar navbar-fixed-top navbar-inverse" ng-controller="topnavcontroller as vm">
     <div class="navbar-header">
-        <a href="/" class="navbar-brand"><span class="brand-title">Parking</span></a>
+        <a href="/" class="navbar-brand"><img src="/Content/images/icon.png" /></a>
         <a class="btn navbar-btn navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
