--- a/ParkingInfringement.API/Areas/HelpPage/Views/Help/Api.cshtml
+++ b/ParkingInfringement.API/Areas/HelpPage/Views/Help/Api.cshtml
@@ -1,5 +1,5 @@
 @using System.Web.Http
-@using AppPundits.Parking.Areas.HelpPage.Models
+@using ParkingInfringement.API.Areas.HelpPage.Models
 @model HelpPageApiModel
 
 @{
