--- a/ParkingInfringement.API/Areas/HelpPage/Views/Help/DisplayTemplates/ApiGroup.cshtml
+++ b/ParkingInfringement.API/Areas/HelpPage/Views/Help/DisplayTemplates/ApiGroup.cshtml
@@ -1,8 +1,8 @@
 @using System.Web.Http
 @using System.Web.Http.Controllers
 @using System.Web.Http.Description
-@using AppPundits.Parking.Areas.HelpPage
-@using AppPundits.Parking.Areas.HelpPage.Models
+@using ParkingInfringement.API.Areas.HelpPage
+@using ParkingInfringement.API.Areas.HelpPage.Models
 @model IGrouping<HttpControllerDescriptor, ApiDescription>
 
 @{
