--- a/ParkingInfringement.API/Areas/HelpPage/Views/Help/DisplayTemplates/CollectionModelDescription.cshtml
+++ b/ParkingInfringement.API/Areas/HelpPage/Views/Help/DisplayTemplates/CollectionModelDescription.cshtml
@@ -1,4 +1,4 @@
-@using AppPundits.Parking.Areas.HelpPage.ModelDescriptions
+@using ParkingInfringement.API.Areas.HelpPage.ModelDescriptions
 @model CollectionModelDescription
 @if (Model.ElementDescription is ComplexTypeModelDescription)
 {
