--- a/ParkingInfringement.API/Areas/HelpPage/Views/Help/DisplayTemplates/HelpPageApiModel.cshtml
+++ b/ParkingInfringement.API/Areas/HelpPage/Views/Help/DisplayTemplates/HelpPageApiModel.cshtml
@@ -1,7 +1,7 @@
 @using System.Web.Http
 @using System.Web.Http.Description
-@using AppPundits.Parking.Areas.HelpPage.Models
-@using AppPundits.Parking.Areas.HelpPage.ModelDescriptions
+@using ParkingInfringement.API.Areas.HelpPage.Models
+@using ParkingInfringement.API.Areas.HelpPage.ModelDescriptions
 @model HelpPageApiModel
 
 @{
