--- a/ParkingInfringement.API/Areas/HelpPage/Views/Help/DisplayTemplates/ImageSample.cshtml
+++ b/ParkingInfringement.API/Areas/HelpPage/Views/Help/DisplayTemplates/ImageSample.cshtml
@@ -1,4 +1,4 @@
-@using AppPundits.Parking.Areas.HelpPage
+@using ParkingInfringement.API.Areas.HelpPage
 @model ImageSample
 
 <img src="@Model.Src" />
