--- a/ParkingInfringement.API/Areas/HelpPage/Views/Help/DisplayTemplates/InvalidSample.cshtml
+++ b/ParkingInfringement.API/Areas/HelpPage/Views/Help/DisplayTemplates/InvalidSample.cshtml
@@ -1,4 +1,4 @@
-@using AppPundits.Parking.Areas.HelpPage
+@using ParkingInfringement.API.Areas.HelpPage
 @model InvalidSample
 
 @if (HttpContext.Current.IsDebuggingEnabled)
