--- a/ParkingInfringement.API/Areas/HelpPage/Views/Help/DisplayTemplates/Parameters.cshtml
+++ b/ParkingInfringement.API/Areas/HelpPage/Views/Help/DisplayTemplates/Parameters.cshtml
@@ -2,7 +2,7 @@
 @using System.Collections.ObjectModel
 @using System.Web.Http.Description
 @using System.Threading
-@using AppPundits.Parking.Areas.HelpPage.ModelDescriptions
+@using ParkingInfringement.API.Areas.HelpPage.ModelDescriptions
 @model IList<ParameterDescription>
 
 @if (Model.Count > 0)
