--- a/ParkingInfringement.API/Areas/HelpPage/Views/Help/Index.cshtml
+++ b/ParkingInfringement.API/Areas/HelpPage/Views/Help/Index.cshtml
@@ -2,7 +2,7 @@
 @using System.Web.Http.Controllers
 @using System.Web.Http.Description
 @using System.Collections.ObjectModel
-@using AppPundits.Parking.Areas.HelpPage.Models
+@using ParkingInfringement.API.Areas.HelpPage.Models
 @model Collection<ApiDescription>
 
 @{
