--- a/ParkingInfringement.API/Areas/HelpPage/Views/Help/ResourceModel.cshtml
+++ b/ParkingInfringement.API/Areas/HelpPage/Views/Help/ResourceModel.cshtml
@@ -1,5 +1,5 @@
 @using System.Web.Http
-@using AppPundits.Parking.Areas.HelpPage.ModelDescriptions
+@using ParkingInfringement.API.Areas.HelpPage.ModelDescriptions
 @model ModelDescription
 
 <link type="text/css" href="~/Areas/HelpPage/HelpPage.css" rel="stylesheet" />
